--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
+    <script
+      id="fiverr-seller-widget-script-6833a74d-9530-4cfe-aade-4ca4e54173c5"
+      src="https://widgets.fiverr.com/api/v1/seller/zulkerb9b?widget_id=6833a74d-9530-4cfe-aade-4ca4e54173c5"
+      data-config='{"category_name":"\n                                    Programming \u0026 Tech\n\n                            "}'
+      async="true"
+      defer="true"
+    ></script>
   </body>
 </html>
